# todo-api

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  create_tables.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 69551cdd0a76_initial.py  90bed45e746e_add_projects_table_relationships.py  ad7f118b158b_add_ondelete_rules_for_task.py
api/: dependencies.py  models.py
api/v1/: router.py
api/v1/endpoints/: auth.py  root.py  tasks.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/core/: config.py  database.py  security.py
app/models/: project.py  task.py  user.py
app/schemas/: project.py  task.py  user.py
core/: config.py  database.py  security.py
models/: task.py  user.py
schemas/: task.py  user.py
scripts/: multiple_dbs.sh
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 18ce1193dd72_.py  32862275440e_.py  (+2 more)
src/core/: config.py  exceptions.py  permissions.py  security.py
src/db/: base.py
src/models/: __init__.py  project.py  task.py  user.py
src/repos/: base.py  membership.py  project.py  project_member.py  refresh_token.py  task.py  user.py
src/schemas/: auth.py  membership.py  project.py  project_member.py  task.py  user.py
src/services/: auth.py  base.py  membership.py  project.py  project_member.py  search.py  task.py  user.py
src/worker/: app.py  tasks.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_auth.py  test_membership.py  test_project.py  test_project_member.py  test_task.py
(+19 files in other folders)
